tests/ui/parser/diagnostics-parenthesized-type-arguments-ice-issue-122345.stderr
error: `Trait(...)` syntax does not support named parameters
  --> $DIR/diagnostics-parenthesized-type-arguments-ice-issue-122345.rs:5:32
   |
LL |         dealloc(ptr2, Layout::(x: !)(1, 1));
   |                                ^ help: remove the parameter name

error[E0425]: cannot find function `dealloc` in this scope
  --> $DIR/diagnostics-parenthesized-type-arguments-ice-issue-122345.rs:5:9
   |
LL |         dealloc(ptr2, Layout::(x: !)(1, 1));
   |         ^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
LL + use std::alloc::dealloc;
   |

error[E0425]: cannot find value `ptr2` in this scope
  --> $DIR/diagnostics-parenthesized-type-arguments-ice-issue-122345.rs:5:17
   |
LL |         dealloc(ptr2, Layout::(x: !)(1, 1));
   |                 ^^^^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `Layout` in this scope
  --> $DIR/diagnostics-parenthesized-type-arguments-ice-issue-122345.rs:5:23
   |
LL |         dealloc(ptr2, Layout::(x: !)(1, 1));
   |                       ^^^^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
